<resources>
    <string name="app_name">픽쳐노트</string>
    <string name="logo_name">picturenote</string>
    <string name="author">작가</string>
    <string name="size">크기</string>
    <string name="favorite">즐겨찾기</string>
    <string name="search">검색하기</string>
    <string name="cancel">취소</string>
    <string name="confirm">확인</string>
    <string name="network">네트워크</string>
    <string name="check_network">네트워크 연결 후 확인 버튼을 눌러주세요.</string>

    <!-- Picture List -->
    <string name="response_fail">정보를 가져오지 못했습니다.</string>
    <string name="socket_time_out">서버와의 통신시간 제한이 지났습니다.\n다시 시도해주세요.</string>
    <string name="go_to_top">위로</string>

    <!-- Picture Detail -->
    <string name="detail">상세정보</string>
    <string name="detail_author">작가 : %s</string>
    <string name="detail_width">넓이 : %s</string>
    <string name="detail_height">높이 : %s</string>
    <string name="next">다음 그림</string>
    <string name="previous">이전 그림</string>
    <string name="add_favorite">즐겨찾기에 등록 되었습니다.</string>
    <string name="delete_favorite">즐겨찾기가 해제 되었습니다.</string>
    <string name="delete_dialog_message">즐겨찾기를 해제 하시겠습니까?</string>
    <string name="add_dialog_message">즐겨찾기를 등록 하시겠습니까?</string>
    <string name="detail_check_network">네트워크 연결후 다시 시도해주세요.</string>

    <!-- Favorite List -->
    <string name="empty_favorite">아직 즐겨찾기가 등록되지 않았네요.</string>

    <!-- Search -->
    <string name="width">넓이</string>
    <string name="height">높이</string>
    <string name="gray_scale">GrayScale</string>
    <string name="blur">Blur</string>
    <string name="blur_gage">Blur Gage : %d</string>
    <string name="input_width">넓이를 입력해주세요.</string>
    <string name="input_height">높이를 입력해주세요.</string>
    <string name="not_found_image">해당하는 이미지를 찾을 수 없습니다.\n다시 시도해주세요.</string>

</resources>