<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="detailViewModel"
            type="com.lee.picturenote.ui.picturedetail.viewmodel.DetailViewModel" />
        <variable
            name="detailActivity"
            type="com.lee.picturenote.ui.picturedetail.PictureDetailActivity" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        >

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:indeterminateTint="@color/black"
            android:visibility="gone"
            android:elevation="32dp"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <RelativeLayout
            android:id="@+id/headerLayout"
            android:layout_width="0dp"
            android:layout_height="@dimen/header_height"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/pictureImageView"
            android:background="@color/main_color"
            >
            <ImageButton
                android:id="@+id/backButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:src="@drawable/back_icon"
                android:backgroundTint="@color/main_color"
                android:onClick="@{() -> detailActivity.finish()}"
                />

            <ImageButton
                android:id="@+id/favoriteButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:src="@drawable/favorite_icon"
                android:backgroundTint="@color/main_color"
                android:layout_alignParentEnd="true"
                />
        </RelativeLayout>

        <ImageView
            android:id="@+id/pictureImageView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/headerLayout"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/contentsLayout"
            android:src="@drawable/no_image"
            android:scaleType="centerInside"
            />

        <LinearLayout
            android:id="@+id/contentsLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/pictureImageView"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/buttonLayout"
            >
            <TextView
                android:id="@+id/contentsTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detail"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:layout_marginBottom="30dp"
                android:textStyle="bold"
                android:background="@color/main_color"
                />
            <TextView
                android:id="@+id/authorTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detail_author"
                android:gravity="center"
                android:textSize="15sp"
                android:layout_marginBottom="5dp"
                />
            <TextView
                android:id="@+id/widthTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detail_width"
                android:gravity="center"
                android:textSize="15sp"
                android:layout_marginBottom="5dp"
                />
            <TextView
                android:id="@+id/heightTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detail_height"
                android:gravity="center"
                android:textSize="15sp"
                android:layout_marginBottom="5dp"
                />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/buttonLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/contentsLayout"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            >

            <Button
                android:id="@+id/previousButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/round_button"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"
                android:text="@string/previous"
                android:textStyle="bold"
                />

            <Button
                android:id="@+id/nextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/round_button"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"
                android:text="@string/next"
                android:layout_alignParentEnd="true"
                android:textStyle="bold"
                />
        </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
