<?xml version="1.0" encoding="utf-8"?>

<layout>
    <data>
        <variable
            name="searchActivity"
            type="com.lee.picturenote.ui.search.SearchActivity" />
        <variable
            name="searchViewModel"
            type="com.lee.picturenote.ui.search.viewmodel.SearchViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        >

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:indeterminateTint="@color/black"
            android:visibility="gone"
            android:elevation="32dp"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <RelativeLayout
            android:id="@+id/headerLayout"
            android:layout_width="0dp"
            android:layout_height="@dimen/header_height"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/contentsLayout"
            android:background="@color/main_color"
            >
            <TextView
                android:id="@+id/headerTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search"
                android:layout_centerInParent="true"
                android:textColor="#fff"
                android:textSize="25sp"
                android:fontFamily="@font/swagger"
                />

            <ImageButton
                android:id="@+id/backButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:src="@drawable/back_icon"
                android:backgroundTint="@color/main_color"
                android:onClick="@{() -> searchActivity.finish()}"
                />
        </RelativeLayout>
        
        <ScrollView
            android:id="@+id/contentsLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/headerLayout"
            app:layout_constraintBottom_toTopOf="@id/submitButton"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            >
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <LinearLayout
                    android:id="@+id/widthLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintTop_toTopOf="parent"
                    android:weightSum="5"
                    android:layout_marginTop="10dp"
                    app:layout_constraintBottom_toTopOf="@id/heightLayout"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:text="@string/width"
                        android:textColor="@color/font_color"
                        android:textSize="15sp"
                        android:layout_weight="2"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"
                        android:textStyle="bold"
                        />
                    <EditText
                        android:id="@+id/widthEditText"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:background="@drawable/border_textview"
                        android:layout_weight="3"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:inputType="number"
                        android:padding="5dp"
                        android:text ="@={searchViewModel.inputWidth}"
                        />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/heightLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintTop_toBottomOf="@id/widthLayout"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/switchLayout"
                    android:weightSum="5"
                    android:layout_marginTop="10dp"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:text="@string/height"
                        android:textColor="@color/font_color"
                        android:textSize="15sp"
                        android:layout_weight="2"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"
                        android:textStyle="bold"
                        />
                    <EditText
                        android:id="@+id/heightEditText"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:background="@drawable/border_textview"
                        android:layout_weight="3"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:inputType="number"
                        android:padding="5dp"
                        android:text ="@={searchViewModel.inputHeight}"
                        />
                </LinearLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/switchLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/heightLayout"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/blurGageLayout"
                    >
                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/grayScaleSwitch"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toLeftOf="@id/blurSwitch"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:text="@string/gray_scale"
                        android:gravity="center"
                        android:theme="@style/Theme.PictureNote"
                        android:paddingEnd="10dp"
                        android:paddingStart="0dp"
                        android:textStyle="bold"
                        />

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/blurSwitch"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintLeft_toRightOf="@id/grayScaleSwitch"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:text="@string/blur"
                        android:gravity="center"
                        android:theme="@style/Theme.PictureNote"
                        android:paddingEnd="10dp"
                        android:paddingStart="0dp"
                        android:textStyle="bold"
                        />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <LinearLayout
                    android:id="@+id/blurGageLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/switchLayout"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/resultImageView"
                    android:orientation="vertical"
                    android:layout_marginBottom="10dp"
                    android:visibility="gone"
                    >
                    <TextView
                        android:id="@+id/blurGageTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/blur_gage"
                        android:gravity="center"
                        android:layout_margin="10dp"
                        android:textColor="@color/font_color"
                        android:textStyle="bold"

                        />
                    <SeekBar
                        android:id="@+id/blurGage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:theme="@style/Theme.PictureNote"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:progress="@={searchViewModel.blurGage}"
                        android:max="10"
                        />
                </LinearLayout>
                <ImageView
                    android:id="@+id/resultImageView"
                    android:layout_width="300dp"
                    android:layout_height="300dp"
                    android:scaleType="centerInside"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/blurGageLayout"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginTop="20dp"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
        <Button
            android:id="@+id/submitButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/contentsLayout"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="10dp"
            android:backgroundTint="@color/main_color"
            android:text="@string/search"
            android:textColor="@color/white"
            android:fontFamily="@font/swagger"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
